syntax = "proto3";
package specs;

option go_package = "github.com/siderolabs/omni/client/api/omni/specs";

import "omni/specs/omni.proto";

message MachineRequestSpec {
  string talos_version = 1;
  specs.Overlay overlay = 2;
  repeated string extensions = 3;
  repeated string kernel_args = 4;
  repeated specs.MetaValue meta_values = 5;
  string provider_data = 6;
  GrpcTunnelMode grpc_tunnel = 7;
}

message MachineRequestStatusSpec {
  enum Stage {
    UNKNOWN = 0;
    PROVISIONING = 1;
    PROVISIONED = 2;
    FAILED = 3;
  }

  string id = 1;
  Stage stage = 2;
  string error = 3;
  string status = 4;
}

message InfraMachineSpec {
  enum MachinePowerState {
    POWER_STATE_OFF = 0;
    POWER_STATE_ON = 1;
  }

  MachinePowerState preferred_power_state = 1;
  InfraMachineConfigSpec.AcceptanceStatus acceptance_status = 2;
  string cluster_talos_version = 3;
  repeated string extensions = 4;

  // WipeId is set to a new id each time the machine gets unallocated.
  //
  // It is used by the provider to ensure that the machine is wiped between allocations.
  string wipe_id = 5;

  string extra_kernel_args = 6;
}

message InfraMachineStateSpec {
  bool installed = 1;
  string last_modified_by = 2;
}

message InfraMachineStatusSpec {
  enum MachinePowerState {
    POWER_STATE_UNKNOWN = 0;
    POWER_STATE_OFF = 1;
    POWER_STATE_ON = 2;
  }

  MachinePowerState power_state = 1;
  bool ready_to_use = 2;
}

message InfraProviderStatusSpec {
  string schema = 1;
  string name = 2;
  string description = 3;
  string icon = 4;
}
